# polkadot-light-client

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: build-ci.yml  first.yml  sanitizer-ci.yml
app/: CMakeLists.txt
app/src/: logger.cpp  logger.h  main.cpp
cmake/: 3rdparty_utils.cmake  check_san_option.cmake  clang.cmake  clang_debug.cmake  clang_debug_profile.cmake  clang_release.cmake  clang_release_profile.cmake  debug.cmake  functions.cmake  gcc.cmake  gcc_debug.cmake  gcc_debug_profile.cmake  gcc_release.cmake  san.cmake  set_profile_path.cmake  utils.cmake
cmake/Conan/: Boost.cmake  GTest.cmake  Protobuf.cmake  binaryen.cmake  cpp-libp2p.cmake  cppcoro.cmake  init.cmake  msgpack.cmake  nlohmann.cmake  packio.cmake  scale.cmake  zstd.cmake
cmake/Conan/binaryen/: CMakeLists.txt  binaryen_plc.patch
cmake/Conan/cpp-libp2p/: CMakeLists.txt
cmake/Conan/packio/: packio_plc.patch
cmake/Conan/scale/: CMakeLists.txt
cmake/toolchain/flags/: sanitize_thread.cmake
config/: logger.yml
core/: CMakeLists.txt
core/src/chain/: spec.cpp  spec.h
core/src/host/: api.cpp  api.h
core/src/network/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  json_rpc.cpp  json_rpc.h  json_rpc_server.cpp  json_rpc_server.h  peer_manager.cpp  peer_manager.h  scale_reader_writer.cpp  scale_reader_writer.h  stream.h
core/src/network/common/: errors.cpp  errors.h  format_peer_id.h  roles.h  streams.h
core/src/network/grandpa/: messages.h  protocol.cpp  protocol.h
core/src/network/json_rpc/: http_session.cpp  http_session.h  http_session.hpp  jrpc_client.cpp  jrpc_client.h  jrpc_server.cpp  jrpc_server.h  json_rpc_client.cpp  json_rpc_client.h  json_rpc_server.cpp  json_rpc_server.h  listener.cpp  listener.h  listener.hpp  websocket_session.cpp  websocket_session.h  websocket_session.hpp
core/src/network/light2/: messages.h  protocol.cpp  protocol.h
core/src/network/light2/protobuf/: CMakeLists.txt  light.proto  schema.proto
core/src/network/packio/: server_session.h
core/src/network/packio/internal/: log.h
core/src/network/packio/json_rpc/: rpc.h
core/src/network/protobuf/: message_reader_writer.cpp  message_reader_writer.h  utils.h
core/src/network/scale/: message_reader_writer.cpp  message_reader_writer.h  streams.h
core/src/network/sync2/: protocol.cpp  protocol.h
core/src/network/sync2/protobuf/: CMakeLists.txt  sync.proto
core/src/runner/: client_runner.cpp  client_runner.h  timer.cpp  timer.h
core/src/runtime/: api.cpp  api.h  executor.cpp  executor.h  external_interface.cpp  external_interface.h  memory.cpp  memory.h  memory_allocator.cpp  memory_allocator.h  module.cpp  module.h  ptr.h  service.cpp  service.h  version.h
core/src/utils/: callback_to_coro.h  hex.cpp  hex.h  move_copy.h  move_on_copy.h  packio_logger.cpp  propagate.h  result.h  stop.cpp  stop.h  stoppable.cpp  stoppable.h  string_conversion.cpp  string_conversion.h  types.h  ws_logger.cpp  ws_logger.h
core/test/: CMakeLists.txt  chain_spec_parse_test.cpp  hex_test.cpp  jrpc_server_test.cpp  json_rpc_server_test.cpp  light2_serialization_test.cpp  memory_allocator_test.cpp  move_on_copy_test.cpp  runtime_service_test.cpp
core/test/assets/: bad_chain.json  chain.json  chain_missing_id.json
core/test/mocks/: client_runner_mock.h  peer_manager_mock.h
core/test/nodeutils/: json-rpc-client.js  package.json
core/test/testutils/: prepare_loggers.h
docs/: code_conventions.md  json_rpc_server.md  local_setup.md
